fixed columns on mobile

--- a/style.css
+++ b/style.css
@@ -78,3 +78,10 @@ h2 {
   bottom: 25px;
   left: 25px;
 }
+
+@media (width <= 600px) {
+  .row {
+    grid-template-columns: 1fr;
+    gap: 3.5em;
+  }
+}
